--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,18 +9,12 @@ jobs:
       matrix:
         target:
           # Unit tests
-          - os: linux
-            cpu: amd64
-            TEST_KIND: unit-tests
-          - os: linux
-            cpu: i386
-            TEST_KIND: unit-tests
-          - os: macos
-            cpu: amd64
-            TEST_KIND: unit-tests
           - os: windows
-            cpu: amd64
-            TEST_KIND: unit-tests
+            cpu: i386
+            TEST_KIND: finalization-minimal
+          - os: windows
+            cpu: i386
+            TEST_KIND: finalization-mainnet
           # Devel cache corrupted for mingw? missing propidl.h on PR but not push CI
           # - os: windows
           #   cpu: i386
@@ -40,11 +34,6 @@ jobs:
           # - os: windows
           #   cpu: amd64
           #   TEST_KIND: finalization-minimal
-          # # TODO - Bootstrap issue: https://github.com/status-im/nim-beacon-chain/issues/1725
-          # # - os: windows
-          # #   cpu: i386
-          # #   TEST_KIND: finalization-minimal
-
           # Mainnet integration tests
           # - os: linux
           #   cpu: amd64
@@ -58,10 +47,6 @@ jobs:
           # - os: windows
           #   cpu: amd64
           #   TEST_KIND: finalization-mainnet
-          # # TODO - Bootstrap issue: https://github.com/status-im/nim-beacon-chain/issues/1725
-          # # - os: windows
-          # #   cpu: i386
-          # #   TEST_KIND: finalization-mainnet
         include:
           - target:
               os: linux
