Fix sync_manager.nim to return proper status. Bump REST API dependencies.

--- a/.gitmodules
+++ b/.gitmodules
@@ -208,3 +208,9 @@
 	url = https://github.com/status-im/nim-unittest2.git
 	ignore = untracked
 	branch = master
+[submodule "vendor/nim-presto"]
+	path = vendor/nim-presto
+	url = https://github.com/status-im/nim-presto.git
+	ignore = untracked
+	branch = master
+
